@startuml Specialty-Class-Diagram

title BookingCare Specialty Service - Class Diagram

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam wrapWidth 220
skinparam maxMessageSize 220

' ========== PRESENTATION LAYER ==========
class SpecialtiesController {
    - _specialtyService: ISpecialtyService
    + GetSpecialty(id): Task<IActionResult>
    + CreateSpecialty(request): Task<IActionResult>
    + UpdateSpecialty(id, request): Task<IActionResult>
    + DeleteSpecialty(id): Task<IActionResult>
    + GetSpecialties(query): Task<IActionResult>
    + ToggleSpecialtyStatus(id): Task<IActionResult>
}

' ========== SERVICE LAYER ==========
interface ISpecialtyService {
    + CreateSpecialtyAsync(request): Task<SpecialtyResponse>
    + GetSpecialtyByIdAsync(id): Task<SpecialtyResponse?>
    + UpdateSpecialtyAsync(request): Task<SpecialtyResponse>
    + DeleteSpecialtyAsync(id): Task<bool>
    + ToggleSpecialtyStatusAsync(id): Task<bool>
    + GetSpecialtiesAsync(query): Task<SpecialtyListResponse>
}

class SpecialtyService {
    - _repository: ISpecialtyRepository
    - _mapper: IMapper
    - _logger: ILogger
    + CreateSpecialtyAsync(request): Task<SpecialtyResponse>
    + GetSpecialtyByIdAsync(id): Task<SpecialtyResponse?>
    + UpdateSpecialtyAsync(request): Task<SpecialtyResponse>
    + DeleteSpecialtyAsync(id): Task<bool>
    + GetSpecialtiesAsync(query): Task<SpecialtyListResponse>
}

' ========== REPOSITORY LAYER ==========
interface ISpecialtyRepository {
    + GetSpecialtyByIdAsync(id): Task<SpecialtyEntity?>
    + CreateSpecialtyAsync(specialty): Task<SpecialtyEntity>
    + UpdateSpecialtyAsync(specialty): Task<SpecialtyEntity>
    + DeleteSpecialtyAsync(id): Task<bool>
    + GetSpecialtiesAsync(query): Task<(List<SpecialtyEntity>, int)>
}

class SpecialtyRepository {
    - _context: DoctorDbContext
    + GetSpecialtyByIdAsync(id): Task<SpecialtyEntity?>
    + CreateSpecialtyAsync(specialty): Task<SpecialtyEntity>
    + UpdateSpecialtyAsync(specialty): Task<SpecialtyEntity>
    + DeleteSpecialtyAsync(id): Task<bool>
}

' ========== DATA LAYER ==========
class DoctorDbContext {
    + Specialties: DbSet<SpecialtyEntity>
}

' ========== ENTITIES ==========
class SpecialtyEntity {
    + Id: Guid
    + Name: string
    + ImageUrl: string
    + Status: Status
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

' ========== DTOs ==========
class CreateSpecialtyRequest {
    + Name: string
    + ImageUrl: string
    + Status: Status
}

class SpecialtyQueryRequest {
    + SearchTerm: string?
    + Status: string?
    + PageNumber: int
    + PageSize: int
}

class SpecialtyResponse {
    + Id: Guid
    + Name: string
    + ImageUrl: string
    + Status: Status
}

class SpecialtyListResponse {
    + Specialties: List<SpecialtyResponse>
    + TotalCount: int
    + PageNumber: int
    + PageSize: int
    + TotalPages: int
}

' ========== LAYOUT HINTS ==========
SpecialtiesController -[hidden]down- ISpecialtyService
ISpecialtyService -[hidden]down- ISpecialtyRepository
ISpecialtyRepository -[hidden]down- DoctorDbContext

' ========== RELATIONSHIPS ==========

' Controller Layer
SpecialtiesController *-- ISpecialtyService

' Service Layer
SpecialtyService ..|> ISpecialtyService
SpecialtyService *-- ISpecialtyRepository
SpecialtyService o-- IMapper

' Repository Layer
SpecialtyRepository ..|> ISpecialtyRepository
SpecialtyRepository *-- DoctorDbContext

' Service Uses DTOs
ISpecialtyService ..> CreateSpecialtyRequest
ISpecialtyService ..> SpecialtyQueryRequest
ISpecialtyService ..> SpecialtyResponse

' Repository Uses Entities
ISpecialtyRepository ..> SpecialtyEntity

@enduml